# module214

./: .coverage  .env  .gitignore  docker-compose.yml  main.py  pyproject.toml  readme.md  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 04b42236b073_add_avatar_to_userdb.py  2933899969a5_add_comfifmed_to_users.py  c5d2562a1c7b_init.py
postgres-data/: postmaster.pid
postgres-data/base/16384/: 1247  1249  1259  16389  16392  16394  16395  16400  16401  16403  16405  16406  16407  16413  16415  16422  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  (+5 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_xact/: 0000
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_reset_template.html  email_verify_template.html  reset_password.html
tests/: conftest.py  test_root.py  test_route_auth.py  test_route_contact.py  test_route_user.py  test_unit_repository_contacts.py  test_unit_repository_user.py
